# InterThings

./: InterThings.code-workspace  README.md
I2CHelper/: CMakeLists.txt  I2CHelper.code-workspace  README.md  idf_component.yml
I2CHelper/Examples/: .gitignore  CMakeLists.txt  README.md
I2CHelper/Include/: I2CHelper.h  I2Helper.h  i2cHelper.h
I2CHelper/src/: I2CHelper.c  i2cHelper.c
IAQHelper/: CMakeLists.txt  IAQHelper.code-workspace  README.md  idf_component.yml
IAQHelper/Include/: IAQHelper.h  common.h
IAQHelper/src/: IAQHelper.c  bme68x.c  common.c
IOHelper/: CMakeLists.txt  IOHelper.code-workspace  README.md  idf_component.yml
IOHelper/Examples/: .gitignore  CMakeLists.txt  README.md
IOHelper/Include/: IOHelper.h
IOHelper/src/: IOHelper.c  IOHelper.cpp
MQTTHelper/: CMakeLists.txt  LICENSE  MQTTHelper.code-workspace  README.md  idf_component.yml
MQTTHelper/Examples/: CMakeLists.txt  README.md
MQTTHelper/Include/: MQTTHelper.h
MQTTHelper/src/: MQTTHelper.c
NVSHelper/: CMakeLists.txt  NVSHelper.code-workspace  README.md  idf_component.yml
NVSHelper/Examples/: CMakeLists.txt  README.md  partitions.csv
NVSHelper/Examples/main/: idf_component.yml  main.c
NVSHelper/Include/: NVSHelper.h
NVSHelper/src/: NVSHelper.c
Utilities/: CMakeLists.txt  README.md  Utilities.code-workspace  idf_component.yml
Utilities/Examples/: CMakeLists.txt  README.md
Utilities/Include/: Utilities.h
Utilities/src/: Utilities.c
WiFiHelper/: CMakeLists.txt  README.md  WiFiHelper.code-workspace  idf_component.yml
WiFiHelper/Examples/: CMakeLists.txt
(+15 files in other folders)
